Desarrollo de actividad 1.

--- a/TP5_Grupo10/bin/src/main/resources/templates/agenda.html
+++ b/TP5_Grupo10/bin/src/main/resources/templates/agenda.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<header>
-		<h1>Facultad de Ingenieria</h1>
+		<h1>BECAS PV</h1>
 		<nav>
 			<ul>
 				<li><a href="index.html">Inicio</a></li>
@@ -15,8 +15,8 @@
 				<li><a href="contacto.html">Contáctanos</a></li>
 			</ul>
 		</nav>
+		<img alt="Calendario" src="../static/images/date.png" title="Calendario 2022">
 	</header>
-	<img alt="Calendario" src="../static/images/date.png" title="Calendario 2022">
 	<article>
 		<section>
 			<p>Las Becas PV tienen como principal objetivo proporcionar un
