--- a/TP5_Grupo10/bin/src/main/resources/templates/contacto.html
+++ b/TP5_Grupo10/bin/src/main/resources/templates/contacto.html
@@ -9,7 +9,13 @@
 	<!-- ENCABEZADO -->
 	<header>
 		<h1>Facultad de Ingenieria</h1>
-		<nav>
+		<img alt="Imagen de algo"
+			src="..\static\images\contacto.jpg"
+			title="Imagen pasaste el cursor">
+	</header>
+	
+	<!-- MENÚ DE NAVEGACIÓN -->
+	<nav>
 		<ul>
 			<li><a href="index.html">Inicio</a></li>
 			<li><a href="agenda.html">Agenda</a></li>
@@ -17,11 +23,7 @@
 			<li><a href="contacto.html">Contáctanos</a></li>
 		</ul>
 	</nav>
-	</header>
 	
-	<img alt="Imagen de algo"
-			src="..\static\images\contacto.jpg"
-			title="Imagen pasaste el cursor">
 	<!-- CARGA DE FORMULARIO -->
 	<form action="https://www.fi.unju.edu.ar/" method="post">
 		<label>Apellido y Nombre:</label>
