--- a/TP5_Grupo10/bin/src/main/resources/templates/idiomas.html
+++ b/TP5_Grupo10/bin/src/main/resources/templates/idiomas.html
@@ -6,7 +6,11 @@
 </head>
 <body>
 	<header>
-		<h1>Facultad de Ingenieria</h1>
+		<h1>Titulo idiomas</h1>
+		<img alt="Idiomas" src="../static/images/img_idioma.jpg" title="Idiomas">
+	</header>
+	
+	<!-- MENÚ DE NAVEGACIÓN -->
 	<nav>
 		<ul>
 			<li><a href="index.html">Inicio</a></li>
@@ -15,9 +19,6 @@
 			<li><a href="contacto.html">Contáctanos</a></li>
 		</ul>
 	</nav>
-	</header>
-	
-	<img alt="Idiomas" src="../static/images/img_idioma.jpg" title="Idiomas">
 
 	<section>
 		<h2>Idiomas</h2>
