--- a/TP5_Grupo10/bin/src/main/resources/templates/index.html
+++ b/TP5_Grupo10/bin/src/main/resources/templates/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
 <meta charset="utf-8">
 <title>Programacion Visual-Principal</title>
 </head>
 <body>
-	<header th:replace="/layouts/header::header"></header>
-	
+	<header>
+		<h1>BECAS PV</h1>
+		<nav>
+			<ul>
+				<li><a href="index.html">Inicio</a></li>
+				<li><a href="agenda.html">Agenda</a></li>
+				<li><a href="beneficios.html">Beneficios y Becas</a></li>
+				<li><a href="contacto.html">Contáctanos</a></li>
+			</ul>
+		</nav>
+	</header>
 	<img alt="Becas Imagen" src="../static/images/becaimg.jpg" title="Becas 2022">
 	<article>
 		<section>
@@ -20,7 +29,10 @@
 			</ol>
 		</section>
 	</article>
-	
-	<footer th:replace="/layouts/footer::footer"></footer>
+	<footer>
+		<p>2022. Portal de Capacitación – Av. Gral. Manuel Belgrano 789 –
+			Teléfono (388) 999999 S. S. de Jujuy República Argentina.</p>
+	</footer>
+
 </body>
 </html>
