Desarrollo de actividad 2.

--- a/TP5_Grupo10/src/main/resources/templates/contacto.html
+++ b/TP5_Grupo10/src/main/resources/templates/contacto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
 <title>Programacion Visual - Contactos</title>
@@ -7,17 +7,7 @@
 <body>
 
 	<!-- ENCABEZADO -->
-	<header>
-		<h1>Facultad de Ingenieria</h1>
-		<nav>
-		<ul>
-			<li><a href="index.html">Inicio</a></li>
-			<li><a href="agenda.html">Agenda</a></li>
-			<li><a href="beneficios.html">Beneficios y Becas</a></li>
-			<li><a href="contacto.html">Contáctanos</a></li>
-		</ul>
-	</nav>
-	</header>
+	<header th:replace="/layouts/header::header"></header>
 	
 	<img alt="Imagen de algo"
 			src="..\static\images\contacto.jpg"
@@ -59,10 +49,7 @@
 
 
 	<!--  PIE DE PÁGINA -->
-	<footer>
-		<p>2022. Portal de Capacitación - Av. Gral. Manuel Belgrano 789 -
-			Teléfono (388) 999999 S. S. de Jujuy República Argentina.</p>
-	</footer>
+	<footer th:replace="/layouts/footer::footer"></footer>
 
 </body>
 </html>
