--- a/TP5_Grupo10/src/main/resources/templates/agenda.html
+++ b/TP5_Grupo10/src/main/resources/templates/agenda.html
@@ -1,21 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8">
 <title>Programacion Visual-Agenda</title>
 </head>
 <body>
-	<header>
-		<h1>Facultad de Ingenieria</h1>
-		<nav>
-			<ul>
-				<li><a href="index.html">Inicio</a></li>
-				<li><a href="agenda.html">Agenda</a></li>
-				<li><a href="beneficios.html">Beneficios y Becas</a></li>
-				<li><a href="contacto.html">Contáctanos</a></li>
-			</ul>
-		</nav>
-	</header>
+	<header th:replace="/layouts/header::header"></header>
+	
 	<img alt="Calendario" src="../static/images/date.png" title="Calendario 2022">
 	<article>
 		<section>
@@ -27,9 +18,7 @@
 		</section>
 		<video src="../static/videos/video.mp4" controls="controls" ></video>
 	</article>
-	<footer>
-		<p>2022. Portal de Capacitación – Av. Gral. Manuel Belgrano 789 –
-			Teléfono (388) 999999 S. S. de Jujuy República Argentina.</p>
-	</footer>
+	
+	<footer th:replace="/layouts/footer::footer"></footer>
 </body>
 </html>
