--- a/TP5_Grupo10/src/main/resources/templates/beneficios.html
+++ b/TP5_Grupo10/src/main/resources/templates/beneficios.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
 <meta charset="UTF-8">
@@ -8,19 +8,8 @@
 <body>
 
 	<!-- ENCABEZADO -->
-	<header>
-		<h1>Facultad de Ingenieria</h1>
-			<!-- MENÚ DE NAVEGACIÓN -->
-	<nav>
-		<ul>
-			<li><a href="index.html">Inicio</a></li>
-			<li><a href="agenda.html">Agenda</a></li>
-			<li><a href="beneficios.html">Beneficios y Becas</a></li>
-			<li><a href="contacto.html">Contáctanos</a></li>
-		</ul>
-	</nav>
-		
-	</header>
+	<header th:replace="/layouts/header::header"></header>
+	
 		<img alt="Imagen de algo"
 			src="..\static\images\becas.jpg"
 			title="Imagen pasaste el cursor">
@@ -31,10 +20,7 @@
 	</section>
 
 	<!--  PIE DE PÁGINA -->
-	<footer>
-		<p>2022. Portal de Capacitación - Av. Gral. Manuel Belgrano 789 -
-			Teléfono (388) 999999 S. S. de Jujuy República Argentina.</p>
-	</footer>
+	<footer th:replace="/layouts/footer::footer"></footer>
 
 </body>
 </html>
