--- a/TP5_Grupo10/src/main/resources/templates/idiomas.html
+++ b/TP5_Grupo10/src/main/resources/templates/idiomas.html
@@ -1,21 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8">
 <title>Programacion visual - Idiomas</title>
 </head>
 <body>
-	<header>
-		<h1>Facultad de Ingenieria</h1>
-	<nav>
-		<ul>
-			<li><a href="index.html">Inicio</a></li>
-			<li><a href="agenda.html">Agenda</a></li>
-			<li><a href="beneficios.html">Beneficios y Becas</a></li>
-			<li><a href="contacto.html">Contáctanos</a></li>
-		</ul>
-	</nav>
-	</header>
+	<header th:replace="/layouts/header::header"></header>
 	
 	<img alt="Idiomas" src="../static/images/img_idioma.jpg" title="Idiomas">
 
@@ -53,5 +43,6 @@
 		</table>
 	</section>
 	
+	<footer th:replace="/layouts/footer::footer"></footer>
 </body>
 </html>
